$Id$

Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V4.050
~~~~~~~~~~~~~~~~~

   o added LED functions for received MIDI IN/OUT events to MBSEQ_HW.V4

   o added BPM LED Digit function to MBSEQ_HW.V4


MIDIboxSEQ V4.049
~~~~~~~~~~~~~~~~~

   o support for MIDI OUT4 and MIDI IN4
     Provided by MBHP_CORE_LPC17 module only.
     MIDI OUT4 is available at J4B.SD
     MIDI IN4 is available at J4B.SC

   o fixed USB issue under Win7 if the interface name hasn't been
     customized in bootloader


MIDIboxSEQ V4.048
~~~~~~~~~~~~~~~~~

   o CC and PitchBender values only send on value changes anymore to save
     MIDI bandwith on high-speed tracks

   o Step record: simplified usage of poly mode. Now the step is automatically
     cleared when all keys were released and new notes are entered.

   o Step record: duration (note length) will now be recorded as well!

   o Live record: some improvements for the "forward MIDI" option

   o MSD mode (SD Card Reader) can now also be enabled with the "msd" command
     in MIOS Terminal

   o Move step: doesn't overwrite new selection anymore



MIDIboxSEQ V4.047
~~~~~~~~~~~~~~~~~

   o MIDIbox SEQ V4 is not beta anymore - but we continue to increment the
     version number and just leave out "beta" :-)

   o compiled for new MIOS32 Bootloader V1.005
     You can safely enable the "fastboot" option of the bootloader, so that
     the application starts immediately after power-on

   o for MBHP_CORE_LPC17: since this board doesn't provide a J5C connector,
     following signals are available at J28:
     - Clock: J28.SDA
     - Start/Stop: J28.SC
     - Gate 7: J28.WS
     - Gate 8: J28.MCLK

   o OSC Client/Server: support for TouchOSC protocol


MIDIboxSEQ V4.0beta46
~~~~~~~~~~~~~~~~~~~~~

   o added multi copy function: press MENU+COPY to export all selected tracks
     into the /PRESETS folder on SD Card. The resulting files are named