@@ -394,7 +394,13 @@ u16 SEQ_UI_PAGES_GP_LED_Handler(void)
       }
     }
 
-    return (1 << ui_selected_scale);
+    if( seq_ui_button_state.SCALE_PRESSED )
+      return (1 << ui_selected_scale);
+
+    if( seq_core_global_scale_root_selection )
+      return (1 << (seq_core_global_scale_root_selection-1)); // selected scale
+    else
+      return 0xf000 | (1 << seq_core_keyb_scale_root); // scale via keyboard
   } break;
 
   ///////////////////////////////////////////////////////////////////////////
@@ -609,21 +615,32 @@ s32 SEQ_UI_PAGES_GP_Button_Handler(u8 button, u8 depressed)
     // should be atomic
     portENTER_CRITICAL();
 
-    ui_selected_scale = button;
-
-    if( ui_selected_scale == 0 ) {
-      // disable force-to-scale for both note tracks (makes sense, since the scale itself is global as well)
-      u8 track;
-      for(track=0; track<SEQ_CORE_NUM_TRACKS; track+=8)
-	seq_cc_trk[track].mode.FORCE_SCALE = 0;
+    // if SCALE button not pressed: select root key
+    if( !seq_ui_button_state.SCALE_PRESSED ) {
+      if( button < 12 ) {
+	seq_core_global_scale_root_selection = button + 1;
+      } else {
+	seq_core_global_scale_root_selection = 0; // via keyboard
+      }
     } else {
-      // select scale
-      seq_core_global_scale = seq_ui_pages_scale_presets[ui_selected_scale];
+      // if pressed: select scale
 
-      // enable force-to-scale for both note tracks (makes sense, since the scale itself is global as well)
-      u8 track;
-      for(track=0; track<SEQ_CORE_NUM_TRACKS; track+=8)
-	seq_cc_trk[track].mode.FORCE_SCALE = 1;
+      ui_selected_scale = button;
+
+      if( ui_selected_scale == 0 ) {
+	// disable force-to-scale for both note tracks (makes sense, since the scale itself is global as well)
+	u8 track;
+	for(track=0; track<SEQ_CORE_NUM_TRACKS; track+=8)
+	  seq_cc_trk[track].mode.FORCE_SCALE = 0;
+      } else {
+	// select scale
+	seq_core_global_scale = seq_ui_pages_scale_presets[ui_selected_scale];
+
+	// enable force-to-scale for both note tracks (makes sense, since the scale itself is global as well)
+	u8 track;
+	for(track=0; track<SEQ_CORE_NUM_TRACKS; track+=8)
+	  seq_cc_trk[track].mode.FORCE_SCALE = 1;
+      }
     }
 
     portEXIT_CRITICAL();
